force-app/main/default/objects/Account/fields/Community_Council__c.field-meta.xml
<CustomField>
    <fullName>Community_Council__c</fullName>
    <label>Community Council</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECDC</fullName>
            </value>
            <value>
                <fullName>EYCC</fullName>
            </value>
            <value>
                <fullName>NYCC</fullName>
            </value>
            <value>
                <fullName>SCC</fullName>
            </value>
            <value>
                <fullName>TEYCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>