force-app/main/default/objects/Account/fields/Contact_Info_SAA_INC__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_SAA_INC__c</fullName>
    <inlineHelpText>Is the company registered office address same as the client contact information above?</inlineHelpText>
    <label>Contact Info SAA (INC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>