force-app/main/default/objects/Account/fields/Created_by__c.field-meta.xml
<CustomField>
    <fullName>Created_by__c</fullName>
    <formula>CreatedBy.FirstName+&#39; &#39;+CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by</label>
    <type>Text</type>
</CustomField>