force-app/main/default/objects/Account/fields/Description_of_Business_Activity_BNR__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Business_Activity_BNR__c</fullName>
    <inlineHelpText>Please provide a brief description of your business (maximum 40 characters):</inlineHelpText>
    <label>Description of Business Activity (BNR)</label>
    <type>TextArea</type>
</CustomField>