force-app/main/default/objects/Account/fields/DMS_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Business_ID__c</fullName>
    <label>DMS Business ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>