force-app/main/default/objects/Account/fields/DMS_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Vendor_ID__c</fullName>
    <label>DMS Vendor ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>