force-app/main/default/objects/Account/fields/Economic_Partnership_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Economic_Partnership_Advisor__c</fullName>
    <label>Economic Partnership Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angela Varone</fullName>
            </value>
            <value>
                <fullName>Antonella Nicaso</fullName>
            </value>
            <value>
                <fullName>David Hessels</fullName>
            </value>
            <value>
                <fullName>Evelyn D&#39;Souza</fullName>
            </value>
            <value>
                <fullName>Marianne Szczuryk</fullName>
            </value>
            <value>
                <fullName>Michael Saunders</fullName>
            </value>
            <value>
                <fullName>Mike Kari</fullName>
            </value>
            <value>
                <fullName>Mike Major</fullName>
            </value>
            <value>
                <fullName>Mirella Martino</fullName>
            </value>
            <value>
                <fullName>Ned Sabev</fullName>
            </value>
            <value>
                <fullName>Rajashree Kumar</fullName>
            </value>
            <value>
                <fullName>Robert Patterson</fullName>
            </value>
            <value>
                <fullName>Ron Nash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>