force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The Email address of the Organization</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>