force-app/main/default/objects/Account/fields/Empl_Incr_or_Decr_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Empl_Incr_or_Decr_Next_12_Months__c</fullName>
    <description>This is a projected indication of the employment total. It identifies if employment will increase or decrease over the next 12 months.The value corresponds to most recent Interaction</description>
    <inlineHelpText>This is a projected indication of the employment total. It identifies if employment will increase or decrease over the next 12 months.The value corresponds to most recent Interaction</inlineHelpText>
    <label>Empl. Incr. or Decr. Next 12 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>