force-app/main/default/objects/Account/fields/Employment_Change_In_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Employment_Change_In_Next_12_Months__c</fullName>
    <description>The increase or decrease. (Tied to Empl. Incr. or Decr. Next 12 Months) corresponds to most recent Interaction.</description>
    <inlineHelpText>The increase or decrease. (Tied to Empl. Incr. or Decr. Next 12 Months) corresponds to most recent Interaction.</inlineHelpText>
    <label>Employment Change In Next 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>