force-app/main/default/objects/Account/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>The extension number</description>
    <label>Extension</label>
    <type>Phone</type>
</CustomField>