force-app/main/default/objects/Account/fields/Future_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Filing_Date__c</fullName>
    <label>Future Filing Date</label>
    <type>Date</type>
</CustomField>