force-app/main/default/objects/Account/fields/How_many_director_will_you_initially_hav__c.field-meta.xml
<CustomField>
    <fullName>How_many_director_will_you_initially_hav__c</fullName>
    <label>How many director will you initially hav</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>