force-app/main/default/objects/Account/fields/Last_Year_Employment_Total__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Employment_Total__c</fullName>
    <description>The total number of full time and part time employees. (Employment Full time  + Employment Part Time) for last year corresponding to most recent interaction.</description>
    <inlineHelpText>The total number of full time and part time employees. (Employment Full time  + Employment Part Time) for last year corresponding to most recent interaction.</inlineHelpText>
    <label>Last Year Employment - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>