force-app/main/default/objects/Account/fields/Maximum_Directors__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Directors__c</fullName>
    <label>Maximum Directors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>