force-app/main/default/objects/Account/fields/Minimum_Directors__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Directors__c</fullName>
    <label>Minimum Directors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>