force-app/main/default/objects/Account/fields/NAICS_2_Digit__c.field-meta.xml
<CustomField>
    <fullName>NAICS_2_Digit__c</fullName>
    <description>This is the two digit code for the North American Industry Classification System. This is for federal use.</description>
    <formula>NAICS_Code_Lookup__r.NAICS_2_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS 2 Digit #</label>
    <type>Text</type>
</CustomField>