force-app/main/default/objects/Account/fields/NAICS_3_Digit__c.field-meta.xml
<CustomField>
    <fullName>NAICS_3_Digit__c</fullName>
    <description>This is the three digit code for the North American Industry Classificiation System. This is for federal use.</description>
    <formula>NAICS_Code_Lookup__r.NAICS_3_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS 3 Digit #</label>
    <type>Text</type>
</CustomField>