force-app/main/default/objects/Account/fields/NAICS_Code_Lookup__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The North American Industry Classification System (Canada version).  This is a 7-digit number with more precise definitions of what a company does with longer numbers.  i.e. 21 is general while 211135 is very detailed.</description>
    <label>NAICS Code Lookup</label>
    <referenceTo>NAICS_Code_Mapping__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>