force-app/main/default/objects/Account/fields/Number_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Directors__c</fullName>
    <label>Number of Directors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minimum / Maximum</fullName>
            </value>
            <value>
                <fullName>Fixed Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>