force-app/main/default/objects/Account/fields/Other_Business_Subsector__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Subsector__c</fullName>
    <description>This is the description of a sub sector that has is not included in the categorization of the Business sector.</description>
    <inlineHelpText>This is the description of a sub sector that has is not included in the categorization of the Business sector.</inlineHelpText>
    <label>Other Business Subsector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>