force-app/main/default/objects/Account/fields/Other_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Other_Website_URL__c</fullName>
    <label>Other Website URL</label>
    <type>Url</type>
</CustomField>