force-app/main/default/objects/Account/fields/Pinterest__c.field-meta.xml
<CustomField>
    <fullName>Pinterest__c</fullName>
    <label>Pinterest</label>
    <type>Url</type>
</CustomField>