force-app/main/default/objects/Account/fields/Primary_Customers__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customers__c</fullName>
    <description>The customers of the organization to identify if they fit into a cluster.  For example a manufacturer of stainless steel bolts that just sells their products to the aerospace sector would be considered part of the sector (or a cluster).  They would just be considered metal manufacturing in traditional sector classifications.</description>
    <inlineHelpText>The customers of the organization to identify if they fit into a cluster.  For example a manufacturer of stainless steel bolts that just sells their products to the aerospace sector would be considered part of the sector (or a cluster).</inlineHelpText>
    <label>Primary Customers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Institutions</fullName>
            </value>
            <value>
                <fullName>Business (General) - large enterprises</fullName>
            </value>
            <value>
                <fullName>Business (General) - small enterprises</fullName>
            </value>
            <value>
                <fullName>Business (General)- medium enterprises</fullName>
            </value>
            <value>
                <fullName>Business (Distributors)</fullName>
            </value>
            <value>
                <fullName>Business (Suppliers)</fullName>
            </value>
            <value>
                <fullName>Clinical - general &amp; specialist Practitioner</fullName>
            </value>
            <value>
                <fullName>Clinical - home healthcare and nursing</fullName>
            </value>
            <value>
                <fullName>Clinical - hospital</fullName>
            </value>
            <value>
                <fullName>Clinical - laboratory</fullName>
            </value>
            <value>
                <fullName>Consumer (General)</fullName>
            </value>
            <value>
                <fullName>Consumer (Patient)</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Researchers</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Retail (General)</fullName>
            </value>
            <value>
                <fullName>Retail (Grocery)</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>