force-app/main/default/objects/Account/fields/Quorum__c.field-meta.xml
<CustomField>
    <fullName>Quorum__c</fullName>
    <label>Quorum</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>