force-app/main/default/objects/Account/fields/Related_Child_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Related_Child_Interactions__c</fullName>
    <description>This field will roll up child interaction values associated to each Account Record. This will be a read only field updated through trigger.</description>
    <inlineHelpText>This field will roll up child interaction values associated to each Account Record. This will be a read only field updated through trigger.</inlineHelpText>
    <label>Related Child Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>