force-app/main/default/objects/Account/fields/Same_as_the_Business_Address_provided__c.field-meta.xml
<CustomField>
    <fullName>Same_as_the_Business_Address_provided__c</fullName>
    <label>Same as the Business Address provided ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>