force-app/main/default/objects/Account/fields/Shipping_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_Number__c</fullName>
    <label>Shipping Street Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>