force-app/main/default/objects/Account/fields/Shipping_Suite__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Suite__c</fullName>
    <label>Shipping Suite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>