force-app/main/default/objects/Account/fields/Standing_Members__c.field-meta.xml
<CustomField>
    <fullName>Standing_Members__c</fullName>
    <label>Standing Members</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>