force-app/main/default/objects/Account/fields/Supply_Chain_Segment__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Segment__c</fullName>
    <description>This is the specific core activity that the organization does or client type that they supply. Many businesses fall into an single area of a supply chain.</description>
    <inlineHelpText>This is the specific core activity that the organization does or client type that they supply. Many businesses fall into an single area of a supply chain.</inlineHelpText>
    <label>Supply Chain Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Government/Government Agency</fullName>
            </value>
            <value>
                <fullName>Associations/NGOs</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>