force-app/main/default/objects/Account/fields/TempContactBRENewsletter__c.field-meta.xml
<CustomField>
    <fullName>TempContactBRENewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adds to Startup Here Toronto newsletter.</description>
    <label>BRE Newsletter</label>
    <type>Checkbox</type>
</CustomField>