force-app/main/default/objects/Account/fields/TempContactBRENewsletter_c__c.field-meta.xml
<CustomField>
    <fullName>TempContactBRENewsletter_c__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Adds contacts to BRE newsletter.</description>
    <label>TempContactBRENewsletter__c</label>
    <type>Checkbox</type>
</CustomField>