force-app/main/default/objects/Account/fields/TempContactEmail__c.field-meta.xml
<CustomField>
    <fullName>TempContactEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>