force-app/main/default/objects/Account/fields/TempContactETNewsletter__c.field-meta.xml
<CustomField>
    <fullName>TempContactETNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ET Newsletter</label>
    <type>Checkbox</type>
</CustomField>