force-app/main/default/objects/Account/fields/TempContactFirstname__c.field-meta.xml
<CustomField>
    <fullName>TempContactFirstname__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>