force-app/main/default/objects/Account/fields/TempContactSUHNewsletter__c.field-meta.xml
<CustomField>
    <fullName>TempContactSUHNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adds to Startup Here Toronto newsletter.</description>
    <label>SUH Newsletter</label>
    <type>Checkbox</type>
</CustomField>