force-app/main/default/objects/Account/fields/TempContactTitle__c.field-meta.xml
<CustomField>
    <fullName>TempContactTitle__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>