force-app/main/default/objects/Account/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <label>Total Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>